...
    fileprivate lazy var titleLabel: UILabel = {
        let lbl = UILabel()
        lbl.font = .preferredFont(forTextStyle: .headline)
        lbl.textColor = .black
        lbl.setContentCompressionResistancePriority(.required, for: .vertical)
        lbl.accessibilityHint = "Title"
        lbl.accessibilityIdentifier = "TitleLabel"
        return lbl
    }()
    
    fileprivate lazy var subtitleLabel: UILabel = {
        let lbl = UILabel()
        lbl.font = .preferredFont(forTextStyle: .footnote)
        lbl.textColor = .gray
        lbl.setContentCompressionResistancePriority(.required, for: .vertical)
        lbl.accessibilityHint = "Subtitle"
        lbl.accessibilityIdentifier = "SubtitleLabel"
        return lbl
    }()
    
    fileprivate lazy var iconImageView: UIAsyncImageView = {
        let loader = URLSessionAsyncImageViewLoader()
        let img = UIAsyncImageView(loader: loader)
...
